# binsync

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: publish.yml  rust.yml
examples/: network.rs  serializer.rs
src/: error.rs  lib.rs  sync.rs
src/cdc/: mod.rs
src/chunk/: manifest.rs  mod.rs  network.rs  provider.rs  sync.rs
src/net/: client.rs  tcp.rs
src/process/: mod.rs  receiver.rs  sender.rs
tests/: common.rs  integration_test.rs
