[package]
name = "binsync"
description = "A library for syncing binary files between two locations."
version = "0.0.2"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/dristic/binsync"
readme = "README.md"
exclude = ["examples/*", ".github/"]

[dependencies]
bincode = "1.3.3"
clap = "2.33.3"
fastcdc = "1.0.5"
indicatif = "0.16.2"
md5 = "0.7.0"
reqwest = { version = "0.11.9", optional = true, features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
rand = "0.8.4"
sha2 = "0.10.1"

[features]
network = ["reqwest"]
