[package]
name = "binsync"
description = "A library for syncing binary files between two locations."
version = "0.0.3"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/dristic/binsync"
readme = "README.md"
exclude = ["examples/*", ".github/"]

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.12", features = ["derive"] }
fastcdc = "1.0.6"
indicatif = "0.16.2"
md5 = "0.7.0"
reqwest = { version = "0.11.10", optional = true, features = ["blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
walkdir = "2.3.2"

[dev-dependencies]
rand = "0.8.5"
sha2 = "0.10.2"

[features]
network = ["reqwest"]
