[package]
name = "binsync"
description = "A library for syncing binary files between two locations."
version = "0.0.4"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/dristic/binsync"
readme = "README.md"
exclude = ["examples/*", ".github/"]

[dependencies]
bincode = "^1"
clap = { version = "^3", features = ["derive"] }
fastcdc = "^1"
indicatif = "0.16.2"
md5 = "^0.7"
reqwest = { version = "^0.11", optional = true, features = ["blocking"] }
serde = { version = "^1", features = ["derive"] }
thiserror = "^1"
walkdir = "^2"

[dev-dependencies]
rand = "^0.8"
sha2 = "^0.10"

[features]
network = ["reqwest"]
